[project]
name = "nexcue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shima10-x1p", email = "moto20000203@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "textual>=6.11.0",
]

[project.scripts]
nexcue = "nexcue:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "textual-dev>=1.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# select = ["E", "F", "I", "UP", "B"]
# ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
